--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,12 +25,13 @@
             >
 
             <TextView
+                android:id="@+id/start_time_tv"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="Hour" />
+                android:text="Pick Start Time" />
 
-            <Spinner
-                android:id="@+id/hour"
+            <TextView
+                android:id="@+id/start_time"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content" />
 
@@ -43,48 +44,30 @@
             >
 
             <TextView
+                android:id="@+id/end_time_tv"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="Minutes" />
-
-            <Spinner
-                android:id="@+id/minute"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            >
+                android:text="Pick End Time" />
 
             <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="Seconds" />
-
-            <Spinner
-                android:id="@+id/second"
+                android:id="@+id/end_time"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content" />
-
         </LinearLayout>
-
-        <Button
-            android:id="@+id/download"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Start downloading"
-            android:padding="10dp"
-            />
 
         <Button
             android:id="@+id/data_calculator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="start Calculate data"
+            android:text="Start Calculating"
+            android:padding="10dp"
+            />
+
+        <Button
+            android:id="@+id/get_permission"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Get Permission"
             android:padding="10dp"
 
             />
