--- a/app/src/main/res/layout/data_history_layout.xml
+++ b/app/src/main/res/layout/data_history_layout.xml
@@ -24,10 +24,9 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_width="100dp"
+                android:layout_width="85dp"
                 android:layout_height="wrap_content"
-                android:text="Date : "
-                />
+                android:text="Date : " />
             <TextView
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
@@ -42,17 +41,33 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="Duration : "
-                />
-            <TextView
-                android:id="@+id/duration"
+                android:id="@+id/text_view_from"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
-                android:text="30"
-                />
+                android:text="From: " />
+
+            <TextView
+                android:id="@+id/text_view_duration_from"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="12/03/2000" />
+
+            <TextView
+                android:id="@+id/text_view_to"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:layout_weight="1"
+                android:text="To: " />
+
+            <TextView
+                android:id="@+id/text_view_duration_to"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="12/03/2000" />
 
         </LinearLayout>
 
@@ -61,21 +76,26 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_width="100dp"
+                android:layout_width="85dp"
                 android:layout_height="wrap_content"
-                android:text="Bytes"
-                />
+                android:text="Bytes" />
 
             <TextView
-                android:layout_width="100dp"
+                android:layout_width="85dp"
                 android:layout_height="wrap_content"
-                android:text="KB"
-                />
+                android:text="KB" />
+
             <TextView
-                android:layout_width="100dp"
+                android:layout_width="85dp"
                 android:layout_height="wrap_content"
-                android:text="MB"
-                />
+                android:text="MB" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="85dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="GB" />
 
 
         </LinearLayout>
@@ -86,23 +106,28 @@
 
             <TextView
                 android:id="@+id/data_in_bytes"
-                android:layout_width="100dp"
+                android:layout_width="85dp"
                 android:layout_height="wrap_content"
-                android:text="120000000"
-                />
+                android:text="120000000" />
 
             <TextView
                 android:id="@+id/data_in_KB"
-                android:layout_width="100dp"
+                android:layout_width="85dp"
                 android:layout_height="wrap_content"
-                android:text="1230"
-                />
+                android:text="1230" />
+
             <TextView
                 android:id="@+id/data_in_MB"
+                android:layout_width="85dp"
+                android:layout_height="wrap_content"
+                android:text="13" />
+
+            <TextView
+                android:id="@+id/data_in_GB"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="13"
-                />
+                android:layout_weight="1"
+                android:text="120000000" />
 
 
         </LinearLayout>
